--- a/dsp_comparison/dsp_comparison.Rmd
+++ b/dsp_comparison/dsp_comparison.Rmd
@@ -1,6 +1,6 @@
 ---
 title: Comparison of IMEx with other protein association datasets
-date: 2016-04-12
+date: 2016-12-19
 author: Pablo Porras
 ---
 ```{r set-options, echo=FALSE}
@@ -13,19 +13,24 @@ Estimating the size of the uncurated interactome
 
 After producing tidy datasets comparing different resources to IMEx data, we put together the data and compare the overlap. 
 
+IMPORTANT: This set of scripts assume the different referenced datasets have been freshly updated. If you need to update results of this set, please re-run the corresponding source as well. 
+
+#### Required libraries
+```{r libraries,message=FALSE,warning=FALSE}
+library(dplyr)
+library(data.table)
+library(UpSetR)
+library(splitstackshape)
+```
 ### Part 1: Load datasets
 
 #### IMEx dataset
 
 I select only purely human interactions here (interactions where both proteins are human). 
 
-```{r warning=FALSE,message=FALSE, eval=FALSE}
-system("Rscript ./scripts/IMEx_ds_generator.R --save")
-```
 ```{r warning=FALSE,message=FALSE}
-imex_full <- read.delim("../IMEx/results/imex_full.txt", header=T, sep="\t",colClasses="character")
+imex_full <- fread("../IMEx/results/imex_full.txt", header=T, sep="\t",colClasses="character",data.table = F)
 imex_human <- unique(subset(imex_full,taxid_a=="9606" & taxid_b=="9606"))
-library(dplyr)
 imex_human$imex <- 1
 imex_human_sel <- unique(select(imex_human,pair_id=pair_id_clean,pmid=pubid,imex))
 imex_pairs <- unique(select(imex_human,pair_id=pair_id_clean,imex))
@@ -37,7 +42,12 @@ The dataset contains `r nrow(imex_pairs)` protein interactions recorded in `r nr
 #### Reactome data
 
 ```{r}
-reactome_pairs_pmids <- read.csv(gzfile("../reactome_interactions/results/pairs_pmid_reactome.txt.gz"),header=T,sep="\t",colClasses=c("character","character","numeric"))
+setwd("../reactome_interactions/results/")
+system("gunzip -k pairs_pmid_reactome.txt.gz")
+reactome_pairs_pmids <- fread("pairs_pmid_reactome.txt",header=T,sep="\t",colClasses=c("character","character","numeric"),data.table = F)
+system("rm pairs_pmid_reactome.txt")
+setwd("../../dsp_comparison/")
+
 reactome_pairs <- unique(select(reactome_pairs_pmids,pair_id,reactome))
 reactome_pmids <- unique(select(reactome_pairs_pmids,pmid,reactome))
 ```
@@ -47,7 +57,12 @@ The reactome dataset contains `r nrow(reactome_pairs)` protein associations reco
 #### Text-mining EPMC data
 
 ```{r}
-tm_pairs_pmids <- read.csv(gzfile("../epmc_text_mining/results/pairs_pmids_tm.txt.gz"),header=T,sep="\t",colClasses=c("character","character","numeric","numeric","numeric","numeric"))
+setwd("../epmc_text_mining/results/")
+system("gunzip -k pairs_pmids_tm.txt.gz")
+tm_pairs_pmids <- fread("pairs_pmids_tm.txt",header=T,sep="\t",colClasses=c("character","character","numeric"),data.table = F)
+system("rm pairs_pmids_tm.txt")
+setwd("../../dsp_comparison/")
+
 tm_pairs_pmids_sel <- unique(select(tm_pairs_pmids,pair_id,pmid,tm_epmc=tm))
 tm_pairs <- unique(select(tm_pairs_pmids,pair_id,tm_epmc=tm))
 tm_pmids <- unique(select(tm_pairs_pmids,pmid,tm_epmc=tm))
@@ -58,7 +73,7 @@ The text-mining EPMC dataset contains `r nrow(tm_pairs)` protein associations re
 #### IID predictions data
 
 ```{r}
-iid_pred_pairs <- read.csv("../iid_predictions/results/pairs_iid_pred.txt",header=T,sep="\t",colClasses=c("character","numeric"))
+iid_pred_pairs <- fread("../iid_predictions/results/pairs_iid_pred.txt",header=T,sep="\t",colClasses=c("character","numeric"),data.table=F)
 ```
 
 The IID-predictions dataset contains `r nrow(iid_pred_pairs)` protein associations.
@@ -84,11 +99,9 @@ I produce a plot with the summary of the overlap between the different datasets 
 
 ##### Figure 1: Comparison between different protein association datasets
 ```{r echo=FALSE, fig.width=10,fig.height=6}
-library(UpSetR)
 upset(comp_table_final, 
       nsets = 4, 
       point.size = 6, 
-      name.size = 12, 
       line.size = 2, 
       mainbar.y.label = "Common protein pairs", 
       sets.x.label = "Nr of protein pairs in dataset", 
@@ -120,7 +133,6 @@ I also produce a sub-plot showing exclusively the intersections, so a more infor
 upset(comp_table_final, 
       nsets = 4, 
       point.size = 6, 
-      name.size = 12, 
       line.size = 2, 
       mainbar.y.label = "Common protein pairs", 
       sets.x.label = "Nr of protein pairs in dataset",
@@ -176,7 +188,6 @@ I produce a plot with the summary of the overlap between the different datasets 
 upset(pubcomp_table_final, 
       nsets = 3, 
       point.size = 6, 
-      name.size = 12, 
       line.size = 2, 
       mainbar.y.label = "Common publications", 
       sets.x.label = "Nr of publications in dataset", 
@@ -199,7 +210,6 @@ And again, I zoom in to check only the intersections.
 upset(pubcomp_table_final, 
       nsets = 3, 
       point.size = 6, 
-      name.size = 12, 
       line.size = 2, 
       mainbar.y.label = "Common protein pairs", 
       sets.x.label = "Nr of protein pairs in dataset",
@@ -217,22 +227,31 @@ upset(pubcomp_table_final,
               list("imex","tm_epmc")))
 ```
 
-********************************************************************************************
+### Part 4: Generating comparison dataset at the pair level taking the publication into account
 
-### Appendix
+```{r}
+prepubpaircomp_table_1 <- unique(merge(imex_human_sel,reactome_pairs_pmids,by=c("pair_id","pmid"),all=T))
+prepubpaircomp_table_2 <- unique(merge(prepubpaircomp_table_1,tm_pairs_pmids_sel,by=c("pair_id","pmid"),all=T))
+pubpaircomp_table <- unique(merge(prepubpaircomp_table_2,iid_pred_pairs,by=c("pair_id"),all=T))
 
-#### Code for the figures
+# I clean and replace all NAs if present.
 
-##### Figure 1: Intersection between different protein association datasets
-```{r eval=FALSE}
-library(UpSetR)
-upset(comp_table_final, 
+pubpaircomp_table_form <- pubpaircomp_table
+pubpaircomp_table_form[is.na(pubpaircomp_table_form <- pubpaircomp_table)] <- 0
+```
+
+The comparison set gives a total number of `r nrow(pubpaircomp_table_form)` protein association pairs, of which `r nrow(pubpaircomp_table_form[pubpaircomp_table_form$imex==0,])` (`r round(nrow(pubpaircomp_table_form[pubpaircomp_table_form$imex==0,])*100/nrow(pubpaircomp_table_form),2)`%) are not curated in IMEx. In all these pairs the publication from which they were derived was also matched, so the overlaps and numbers differ from my previous comparisons. 
+
+I produce a plot with the summary of the overlap between the different datasets evaluated. 
+
+##### Figure 5: Comparison between different protein association datasets at the pair+publication level
+```{r echo=FALSE, fig.width=10,fig.height=6}
+upset(pubpaircomp_table_form, 
       nsets = 4, 
       point.size = 6, 
-      name.size = 12, 
       line.size = 2, 
-      mainbar.y.label = "Common protein pairs", 
-      sets.x.label = "Nr of protein pairs in dataset", 
+      mainbar.y.label = "Common pair/publication combos", 
+      sets.x.label = "Nr of pair/publication combos in dataset", 
       order.by="freq",
       decreasing=FALSE,
       queries = list(
@@ -244,24 +263,25 @@ upset(comp_table_final,
               list(query = intersects, params = list("imex","reactome","tm_epmc"), color= "orange1",active = T),
               list(query = intersects, params = list("imex","iid_pred","tm_epmc"), color= "orange1",active = T),
               list(query = intersects, params = list("imex","iid_pred","reactome"), color= "orange1",active = T),
-              list(query = intersects, params = list("imex","iid_pred"), color= "lightgoldenrod1",active = T),
-              list(query = intersects, params = list("imex","reactome"), color= "lightgoldenrod1",active = T),
-              list(query = intersects, params = list("imex","tm_epmc"), color= "lightgoldenrod1",active = T),
+              list(query = intersects, params = list("imex","iid_pred"), color= "lightgoldenrod2",active = T),
+              list(query = intersects, params = list("imex","reactome"), color= "lightgoldenrod2",active = T),
+              list(query = intersects, params = list("imex","tm_epmc"), color= "lightgoldenrod2",active = T),
               list(query = intersects, params = list("imex"), color= "gray70",active = T),
               list(query = intersects, params = list("reactome"), color= "gray70",active = T),
               list(query = intersects, params = list("iid_pred"), color= "gray70",active = T),
               list(query = intersects, params = list("tm_epmc"), color= "gray70",active = T)))
-
 ```
-##### Figure 2: Intersection between different protein association datasets (intersections only)
-```{r eval=FALSE}
-upset(comp_table_final, 
+
+And again, a sub-plot showing exclusively the intersections, for better comparison.  
+
+##### Figure 6: Intersection between different protein association datasets at the pair+publication level
+```{r echo=FALSE,fig.width=10,fig.height=6}
+upset(pubpaircomp_table_form, 
       nsets = 4, 
       point.size = 6, 
-      name.size = 12, 
       line.size = 2, 
-      mainbar.y.label = "Common protein pairs", 
-      sets.x.label = "Nr of protein pairs in dataset",
+      mainbar.y.label = "Common pair/publication combos", 
+      sets.x.label = "Nr of pair/publication combos in dataset",
       order.by="freq",
       decreasing=FALSE,
       queries = list(
@@ -273,9 +293,9 @@ upset(comp_table_final,
               list(query = intersects, params = list("imex","reactome","tm_epmc"), color= "orange1",active = T),
               list(query = intersects, params = list("imex","iid_pred","tm_epmc"), color= "orange1",active = T),
               list(query = intersects, params = list("imex","iid_pred","reactome"), color= "orange1",active = T),
-              list(query = intersects, params = list("imex","iid_pred"), color= "lightgoldenrod1",active = T),
-              list(query = intersects, params = list("imex","reactome"), color= "lightgoldenrod1",active = T),
-              list(query = intersects, params = list("imex","tm_epmc"), color= "lightgoldenrod1",active = T)),
+              list(query = intersects, params = list("imex","iid_pred"), color= "lightgoldenrod2",active = T),
+              list(query = intersects, params = list("imex","reactome"), color= "lightgoldenrod2",active = T),
+              list(query = intersects, params = list("imex","tm_epmc"), color= "lightgoldenrod2",active = T)),
       intersections = list(
               list("reactome","iid_pred","tm_epmc"),
               list("iid_pred","tm_epmc"),
@@ -289,45 +309,73 @@ upset(comp_table_final,
               list("imex","reactome"),
               list("imex","tm_epmc")))
 ```
-##### Figure 3: Comparison between different protein association datasets at the publication level
-```{r eval=FALSE}
-upset(pubcomp_table_final, 
-      nsets = 4, 
-      point.size = 6, 
-      name.size = 12, 
-      line.size = 2, 
-      mainbar.y.label = "Common publications", 
-      sets.x.label = "Nr of publications in dataset", 
-      order.by="freq",
-      decreasing=FALSE,
-      queries = list(
-              list(query = intersects, params = list("reactome","tm_epmc"), color = "blue", active = T),
-              list(query = intersects, params = list("imex","reactome","tm_epmc"), color= "darkorange2",active = T),
-              list(query = intersects, params = list("imex","reactome"), color= "lightgoldenrod2",active = T),
-              list(query = intersects, params = list("imex","tm_epmc"), color= "lightgoldenrod2",active = T),
-              list(query = intersects, params = list("imex"), color= "gray70",active = T),
-              list(query = intersects, params = list("reactome"), color= "gray70",active = T),
-              list(query = intersects, params = list("tm_epmc"), color= "gray70",active = T)))
+
+### Part 6: Checking how many of the pair/publication combos involved uncurated proteins
+
+I use a list of proteins non-curated in IMEx produced by Vitalii Kleschevnikov (IntAct group). He produced several versions of this list, using the different versions of the UniProtKB as reference. 
+
+##### Pre-formatting pair/puplication combo comparisons
+
+I need to preformat the 'pubpaircomp_table_final' data frame to compare it with VK lists.
+
+```{r pp_combo_preformat}
+pubpaircomp_table_check_pt1 <- pubpaircomp_table_form
+pubpaircomp_table_check_pt1$prots <- pubpaircomp_table_form$pair_id
+pubpaircomp_table_check_pt2 <- cSplit(pubpaircomp_table_check_pt1, "prots", sep = "_", direction = "long")
 ```
-##### Figure 4: Intersection between different protein association datasets at the publication level
-```{r eval=FALSE}
-upset(pubcomp_table_final, 
-      nsets = 3, 
-      point.size = 6, 
-      name.size = 12, 
-      line.size = 2, 
-      mainbar.y.label = "Common protein pairs", 
-      sets.x.label = "Nr of protein pairs in dataset",
-      order.by="freq",
-      decreasing=FALSE,
-      queries = list(
-              list(query = intersects, params = list("reactome","tm_epmc"), color = "blue", active = T),
-              list(query = intersects, params = list("imex","reactome","tm_epmc"), color= "darkorange2",active = T),
-              list(query = intersects, params = list("imex","reactome"), color= "lightgoldenrod2",active = T),
-              list(query = intersects, params = list("imex","tm_epmc"), color= "lightgoldenrod2",active = T)),
-      intersections = list(
-              list("reactome","tm_epmc"),
-              list("imex","reactome","tm_epmc"),
-              list("imex","reactome"),
-              list("imex","tm_epmc")))
+
+##### Upload IMEx non-curated protein lists
+
+I do not use the list that considers isoforms, since they were not considered in any of the datasets used in the comparison. 
+```{r noncur_upload}
+noimex_spnoisof <- unique(fread("./imex_non_curated/Swissprot_without_isoforms_missing_in_IntAct.txt",header=F,colClasses = "character",data.table = F))
+
+noimex_upnoisof <- unique(fread("./imex_non_curated/UniprotKB_without_isoforms_missing_in_IntAct.txt",header=F,colClasses = "character",data.table = F))
 ```
+
+##### Check how many of the proteins are missing from IMEx
+
+I will identify those pairs that have proteins that have not been 
+```{r missing_check}
+pubpaircomp_table_check_pt3 <- mutate(pubpaircomp_table_check_pt2,
+                                  noncur_prot = 
+                                          ifelse(
+                                                  prots %in% noimex_upnoisof$V1,
+                                                  1,
+                                                  0))
+
+pubpaircomp_noncur_pairs <- unique(subset(pubpaircomp_table_check_pt3,noncur_prot==1,select= c("pair_id","noncur_prot")))
+
+pubpaircomp_table_check_pt4 <- unique(merge(pubpaircomp_table_form,pubpaircomp_noncur_pairs,by="pair_id",all.x = T,all.y = F))
+pubpaircomp_table_final <- pubpaircomp_table_check_pt4
+pubpaircomp_table_final[is.na(pubpaircomp_table_final <- pubpaircomp_table_check_pt4)] <- 0
+        
+write.table(pubpaircomp_table_final,"./results/pubpaircomp_table_final.txt",col.names=T,row.names=F,sep="\t",quote=F)
+
+setwd("./results")
+system("tar -czvf pubpaircomp_table_final.txt.tar.gz pubpaircomp_table_final.txt && rm pubpaircomp_table_final.txt")
+setwd("../")
+```
+
+##### Generate new 'low-hanging fruit' list
+
+I check the "low hanging fruit": those pair/publication combos that were not found in IMEx, but were identified in the other three resources, plus a column stating if the pair contains non-curated proteins or not. 
+
+```{r final_lhf}
+lhf <- unique(subset(pubpaircomp_table_final,
+                     imex == 0 &
+                             reactome == 1 &
+                             tm_epmc == 1 &
+                             iid_pred == 1))
+
+lhf <- arrange(lhf,desc(noncur_prot),desc(pmid))
+
+lhf_pairs <- unique(select(lhf,pair_id))
+lhf_pmids <- unique(select(lhf,pmid))
+
+write.table(lhf,"./results/lhf_list.txt",col.names=T,row.names = F,sep="\t",quote=F)
+```
+
+There are `r nrow(lhf_pairs)` pairs recorded in `r nrow(lhf_pmids)` publications that are not curated in IMEx but are found in the other datasets. 
+
+********************************************************************************************
