--- a/dsp_comparison/dsp_comparison.Rmd
+++ b/dsp_comparison/dsp_comparison.Rmd
@@ -17,6 +17,7 @@ IMPORTANT: This set of scripts assume the different referenced datasets have bee
 
 #### Required libraries
 ```{r libraries,message=FALSE,warning=FALSE}
+library(plyr)
 library(dplyr)
 library(data.table)
 library(UpSetR)
@@ -377,5 +378,32 @@ write.table(lhf,"./results/lhf_list.txt",col.names=T,row.names = F,sep="\t",quot
 ```
 
 There are `r nrow(lhf_pairs)` pairs recorded in `r nrow(lhf_pmids)` publications that are not curated in IMEx but are found in the other datasets. 
+
+
+### Part 7: Test sets for Reactome and text-mined datasets
+
+I generate a couple of random samples from the subset of the text-mined and Reactome datasets that is not represented in IMEx. These samples are to be checked by curators to estimate what is the percentage of true/false positives in these datasets. I decide to just provide the PMIDs and request curators to check if the PMID contains interactors and identify the proteins if that's so. 
+
+```{r random_samples}
+pubpairs_not_imex <- pubpaircomp_table_final[pubpaircomp_table_final$imex==0 & pubpaircomp_table_final$pair_id != "",]
+pubpairs_not_imex_sel <- unique(select(pubpairs_not_imex,pmid,pair_id))
+
+publs_not_imex <- unique(select(pubpairs_not_imex,pmid,imex,reactome,tm_epmc,iid_pred,noncur_prot))
+
+set.seed(88)
+
+reactpubl_not_imex <- publs_not_imex[publs_not_imex$reactome==1,]
+reactpubl_sample <- reactpubl_not_imex[sample(1:nrow(reactpubl_not_imex),100),]
+react_sample <- unique(merge(reactpubl_sample,pubpairs_not_imex_sel,by="pmid"))
+
+tmpubl_not_imex <- publs_not_imex[publs_not_imex$tm_epmc==1,]
+tmpubl_sample <- tmpubl_not_imex[sample(1:nrow(tmpubl_not_imex),100),]
+tm_sample <- unique(merge(tmpubl_sample,pubpairs_not_imex_sel,by="pmid"))
+
+write.table(reactpubl_sample,"./results/reactpubl_sample.txt",col.names = T,row.names = F,sep="\t",quote=F)
+write.table(tmpubl_sample,"./results/tmpubl_sample.txt",col.names = T,row.names = F,sep="\t",quote=F)
+```
+
+Low-hanging fruit and Reactome/TM evaluation lists can be checked and accessed at https://docs.google.com/spreadsheets/d/1tL1HtVD3-BxHxKuXbIYhcFjmCptGVEOD5aFJCZw6CZk/edit?usp=sharing. 
 
 ********************************************************************************************
