--- a/BioGRID/BioGRID_dsgen.Rmd
+++ b/BioGRID/BioGRID_dsgen.Rmd
@@ -1,3 +1,8 @@
+---
+output: 
+  html_document: 
+    keep_md: yes
+---
 BioGRID dataset generator
 ========================================================
 
@@ -57,7 +62,7 @@ biogrid_pmids <- data.frame(unique(biogrid_from_mentha$pubid))
 write.table(biogrid_pmids, "./results/biogrid_pmids.txt", quote=F, sep ="\t", row.names = F, col.names = T)
 ```
 
-`r nrow(biogrid_pmids)` publications are curated into BioGRID. 
+`r nrow(biogrid_pmids)` publications are curated into BioGRID database. 
 
 #### Compare BioGRID interactions and publications to IMEx 
 
