--- a/GO_IPI/GO_IPI_dsgen.Rmd
+++ b/GO_IPI/GO_IPI_dsgen.Rmd
@@ -3,7 +3,7 @@ output:
   html_document: 
     keep_md: yes
 ---
-GO IPI, Gene Ontology - Inferred from Physical Interaction - dataset generator
+GO IPI, Gene Ontology - Inferred from Physical Interaction - dataset generator -wrong
 ========================================================
 
 #### Load Gene Ontology
@@ -19,6 +19,13 @@ suppressPackageStartupMessages({
 ```
 
 I download the latest version of the GO annotations (UniProt KnowledgeBase (UniProtKB), IntAct protein complexes, and RNAcentral identifiers - multispecies) data from geneontology.org. Current file was downloaded on `r GO_date`. 
+
+
+## PSICQIUC
+
+```{r PSICQIUC}
+
+```
 
 ```{r message=FALSE, warning=FALSE}
 if(!file.exists("./source_files/goa_uniprot_all_noiea.gaf.gz")){
@@ -55,38 +62,19 @@ write.table(GO_IPI_publications, "./results/GO_IPI_pmids.txt", quote=F, sep ="\t
 
 `r nrow(GO_IPI_publications)` publications are curated into GO IPI annotations 
 
-#### Compare GO IPI publications to IMEx 
-
-```{r GO_IPI_vs_imex_pmids, message=FALSE, warning=FALSE, fig.width=4, fig.height=2}
-imex = fread("https://raw.githubusercontent.com/pporrasebi/darkspaceproject/master/IMEx/results/imex_full.txt", header = T, sep = "\t", colClasses = "character")
-N_pubid_imex = length(imex[,unique(pubid)])
-N_pubid_GO_IPI = length(GO_IPI_publications$GO_IPI_pmids)
-N_pubid_overlap = sum(!is.na(match(GO_IPI_publications$GO_IPI_pmids, imex[,unique(pubid)])))
-
-venn.d = draw.pairwise.venn(area1 = N_pubid_imex, area2 = N_pubid_GO_IPI, cross.area = N_pubid_overlap, category = c("IMEx", "GO_IPI"), 
-                          lty = rep("blank", 2), 
-                          fill = c("blue", "red"), 
-                          alpha = rep(0.5, 2), cat.pos = c(0, 135), 
-                          cat.dist = rep(0.035, 2), 
-                          cat.cex = c(1,1), scaled = TRUE, euler.d = TRUE,  margin = 0.05,
-                          direct.area = TRUE,
-                          cex = 1)
-
-```
-
 
 Transforming the data to get interacting pairs, and save the table of interacting pairs, publication IDs and GO IPI tag.
 
 ```{r pairs, results='hide', message=FALSE, warning=FALSE}
 # selecting necessary columns
-GO_IPI_pairs = GO_IPI[,.(ida = V2, idb = V8, pubid = V6, GO_IPI = 1)]
+GO_IPI_pairs = GO_IPI[,.(ida = V2, idb = V8, pubid = V6, GO_IPI = 1, taxon = V13)]
 # expanding frow/with column (for the cases when frow/with column contains more that 1 identifier) to get pairs of interactions
 idbz = GO_IPI_pairs[, tstrsplit(x = as.character(idb), split = "|",fixed = TRUE)]
-GO_IPI_pairs = GO_IPI_pairs[, data.table(ida = ida, idbz, pubid = pubid, GO_IPI = GO_IPI)]
+GO_IPI_pairs = GO_IPI_pairs[, data.table(ida = ida, idbz, pubid = pubid, taxon = taxon, GO_IPI = GO_IPI)]
 GO_IPI_pairs = melt(GO_IPI_pairs,measure.vars = patterns("^V[[:digit:]]+"), value.name = "idb", na.rm = T)
 GO_IPI_pairs[, variable := NULL]
 idbz = GO_IPI_pairs[, tstrsplit(x = as.character(idb), split = ",",fixed = TRUE)]
-GO_IPI_pairs = GO_IPI_pairs[, data.table(ida = ida, idbz, pubid = pubid, GO_IPI = GO_IPI)]
+GO_IPI_pairs = GO_IPI_pairs[, data.table(ida = ida, idbz, pubid = pubid, taxon = taxon, GO_IPI = GO_IPI)]
 GO_IPI_pairs = melt(GO_IPI_pairs, measure.vars = patterns("^V[[:digit:]]+"), value.name = "idb", na.rm = T)
 GO_IPI_pairs[, variable := NULL]
 # Cleaning idb of the database of origin
@@ -107,7 +95,8 @@ GO_IPI_pairs[, idb_clean := gsub(":PRO_[[:digit:]]+$","",idb_clean)]
 GO_IPI_pairs[, pair_id_clean := apply(data.table(ida_clean,idb_clean,stringsAsFactors = F), 1,
                                                function(a) { z = sort(a)
                                                paste0(z[1],"_",z[2]) })]
-GO_IPI_pairs = GO_IPI_pairs[,.(ida, idb, pair_id, ida_clean, idb_clean, pair_id_clean, pubid, GO_IPI)]
+GO_IPI_pairs = GO_IPI_pairs[,.(ida, idb, pair_id, ida_clean, idb_clean, pair_id_clean, pubid, taxon, GO_IPI)]
+# this table includes all taxons
 fwrite(x = unique(GO_IPI_pairs), 
        file = "./processed_files/pairs_pmids_GO_IPI.txt", sep = "\t")
 N_GO_IPI = length(GO_IPI_pairs[,unique(pair_id_clean)])
@@ -115,20 +104,40 @@ N_GO_IPI = length(GO_IPI_pairs[,unique(pair_id_clean)])
 
 The GO IPI dataset contains `r N_GO_IPI` interacting pairs. 
 
+All tables in the results folder are filtered for human data only. Venn Diagrams show human data only.
 Saving the table of interacting pairs, publication IDs and GO IPI tag.
 ```{r saving_results}
-fwrite(x = unique(GO_IPI_pairs[, .(pair_id_clean, pubid, GO_IPI)]), 
+fwrite(x = unique(GO_IPI_pairs[taxon == "taxon:9606", .(pair_id_clean, pubid, GO_IPI)]), 
        file = "./results/pairs_pmids_GO_IPI.txt", sep = "\t")
 ```
 
-#### Compare BioGRID interactions and publications to IMEx 
+#### Compare GO IPI publications to IMEx 
+
+```{r GO_IPI_vs_imex_pmids, message=FALSE, warning=FALSE, fig.width=4, fig.height=2}
+imex = fread("https://raw.githubusercontent.com/pporrasebi/darkspaceproject/master/IMEx/results/imex_full.txt", header = T, sep = "\t", colClasses = "character")
+N_pubid_imex = length(imex[taxid_a == "9606" | taxid_b == "9606", unique(pubid)])
+N_pubid_GO_IPI = length(GO_IPI_pairs[taxon == "taxon:9606",unique(pubid)])
+N_pubid_overlap = sum(!is.na(match(GO_IPI_pairs[taxon == "taxon:9606",unique(pubid)], imex[,unique(pubid)])))
+
+venn.d = draw.pairwise.venn(area1 = N_pubid_imex, area2 = N_pubid_GO_IPI, cross.area = N_pubid_overlap, category = c("IMEx", "GO_IPI"), 
+                          lty = rep("blank", 2), 
+                          fill = c("blue", "red"), 
+                          alpha = rep(0.5, 2), cat.pos = c(0, 135), 
+                          cat.dist = rep(0.035, 2), 
+                          cat.cex = c(1,1), scaled = TRUE, euler.d = TRUE,  margin = 0.05,
+                          direct.area = TRUE,
+                          cex = 1)
+
+```
+
+#### Compare GO IPI interactions and publications to IMEx 
 
 I calculate how many interactions in GO IPI dataset match to IMEx.
 
 ```{r biogrid_vs_imex, message=FALSE, warning=FALSE, fig.width=4, fig.height=2}
-N_imex = length(imex[,unique(pair_id_clean)])
-N_GO_IPI = length(GO_IPI_pairs[,unique(pair_id_clean)])
-N_overlap = sum(!is.na(match(GO_IPI_pairs[,unique(pair_id_clean)], imex[,unique(pair_id_clean)])))
+N_imex = length(imex[taxid_a == "9606" | taxid_b == "9606",unique(pair_id_clean)])
+N_GO_IPI = length(GO_IPI_pairs[taxon == "taxon:9606",unique(pair_id_clean)])
+N_overlap = sum(!is.na(match(GO_IPI_pairs[taxon == "taxon:9606",unique(pair_id_clean)], imex[taxid_a == "9606" | taxid_b == "9606", unique(pair_id_clean)])))
 
 venn.d = draw.pairwise.venn(area1 = N_imex, area2 = N_GO_IPI, cross.area = N_overlap, category = c("IMEx", "GO_IPI"), 
                           lty = rep("blank", 2), 
@@ -144,9 +153,9 @@ venn.d = draw.pairwise.venn(area1 = N_imex, area2 = N_GO_IPI, cross.area = N_ove
 I calculate how many interactions published in specific articles (the same interaction can come from different publications) in GO IPI dataset match to IMEx.
 
 ```{r biogrid_vs_imex_pub_inter, message=FALSE, warning=FALSE, fig.width=4, fig.height=2}
-N_pub_int_imex = length(imex[,unique(paste0(pubid,"_",pair_id_clean))])
+N_pub_int_imex = length(imex[taxid_a == "9606" | taxid_b == "9606", unique(paste0(pubid,"_",pair_id_clean))])
 N_pub_int_GO_IPI = length(GO_IPI_pairs[,unique(paste0(pubid,"_",pair_id_clean))])
-N_pub_int_overlap = sum(!is.na(match(GO_IPI_pairs[,unique(paste0(pubid,"_",pair_id_clean))], imex[,unique(paste0(pubid,"_",pair_id_clean))])))
+N_pub_int_overlap = sum(!is.na(match(GO_IPI_pairs[,unique(paste0(pubid,"_",pair_id_clean))], imex[taxid_a == "9606" | taxid_b == "9606", unique(paste0(pubid,"_",pair_id_clean))])))
 
 venn.d = draw.pairwise.venn(area1 = N_pub_int_imex, area2 = N_pub_int_GO_IPI, cross.area = N_pub_int_overlap, category = c("IMEx", "GO_IPI"), 
                           lty = rep("blank", 2), 
